--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ os:
 - osx
 
 before_script:
-- export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start; fi
 - npm install
 -
