--- a/package.json
+++ b/package.json
@@ -19,6 +19,28 @@
   "bugs": "https://github.com/vShareApp/vShare-electron/issues",
   "build": {
     "appId": "me.pushkaranand.vshare",
+    "linux": {
+      "target": [
+        "snap",
+        "AppImage",
+        "deb"
+      ]
+    },
+    "mac": {
+      "category": "public.app-category.utilities",
+      "target": [
+        "zip",
+        "dmg"
+      ]
+    },
+    "nsis": {
+      "createDesktopShortcut": "always",
+      "oneClick": "true"
+    },
+    "win": {
+      "target": "NSIS",
+      "icon": "resources/icon.ico"
+    },
     "files": [
       "app/**/*",
       "node_modules/**/*",
@@ -37,7 +59,8 @@
     "e2e": "mocha temp/e2e.js --require source-map-support/register",
     "test": "npm run unit && npm run e2e",
     "start": "node build/start.js",
-    "release": "npm test && webpack --config=build/webpack.app.config.js --env=production && electron-builder"
+    "release": "npm test && webpack --config=build/webpack.app.config.js --env=production && electron-builder",
+    "rebuild": "npm test && webpack --config=build/webpack.app.config.js --env=production && electron-rebuild"
   },
   "dependencies": {
     "fs-jetpack": "^2.1.0"
