--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   },
   "contributors": [{
     "name": "Suresh N",
-    "email": "sureshsunsuri@gmail.com",
+    "email": "sureshsunsuri@gmail.com"
 
   }]
 }
