fixed npm peer install issue.

--- a/package.json
+++ b/package.json
@@ -59,8 +59,7 @@
     "e2e": "mocha temp/e2e.js --require source-map-support/register",
     "test": "npm run unit && npm run e2e",
     "start": "node build/start.js",
-    "release": "npm test && webpack --config=build/webpack.app.config.js --env=production && electron-builder",
-    "rebuild": "npm test && webpack --config=build/webpack.app.config.js --env=production && electron-rebuild"
+    "release": "npm test && webpack --config=build/webpack.app.config.js --env=production && electron-builder"
   },
   "dependencies": {
     "fs-jetpack": "^2.1.0",
@@ -69,6 +68,7 @@
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.54",
     "@babel/preset-env": "^7.0.0-beta.54",
+    "ajv": "^6.5.4",
     "babel-loader": "^8.0.0-beta.4",
     "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
     "chai": "^4.1.0",
@@ -79,8 +79,8 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "mocha": "^5.2.0",
     "source-map-support": "^0.5.6",
-    "style-loader": "^0.23.1",
     "spectron": "^4.0.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.4",
     "webpack-merge": "^4.1.3",
