--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "release": "npm test && webpack --config=build/webpack.app.config.js --env=production && electron-builder"
   },
   "dependencies": {
-    "fs-jetpack": "^2.1.0"
+    "fs-jetpack": "^2.1.0",
+    "jsonfile": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.54",
@@ -62,9 +63,10 @@
     "webpack-merge": "^4.1.3",
     "webpack-node-externals": "^1.7.2"
   },
-  "contributors": [{
-    "name": "Suresh N",
-    "email": "sureshsunsuri@gmail.com"
-
-  }]
+  "contributors": [
+    {
+      "name": "Suresh N",
+      "email": "sureshsunsuri@gmail.com"
+    }
+  ]
 }
