--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-share",
   "productName": "vShare",
-  "description": "Sare app",
+  "description": "Share app",
   "version": "0.1.0",
   "author": {
     "name": "Pushkar Anand",
@@ -58,7 +58,7 @@
     "pree2e": "webpack --config=build/webpack.app.config.js --env=test --display=none && webpack --config=build/webpack.e2e.config.js --env=test --display=none",
     "e2e": "mocha temp/e2e.js --require source-map-support/register",
     "test": "npm run unit && npm run e2e",
-    "start": "node build/start.js",
+    "start": "node $NODE_DEBUG_OPTION build/start.js",
     "release": "npm test && webpack --config=build/webpack.app.config.js --env=production && electron-builder"
   },
   "dependencies": {
