changed onclick to false.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     },
     "nsis": {
       "createDesktopShortcut": "always",
-      "oneClick": "true"
+      "oneClick": "false"
     },
     "win": {
       "target": "NSIS",
