--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "release": "npm test && webpack --config=build/webpack.app.config.js --env=production && electron-builder"
   },
   "dependencies": {
+    "about-window": "^1.12.1",
     "fs-jetpack": "^2.2.0",
     "jsonfile": "^5.0.0"
   },
